# 1195-25-HTL3R

./: .gitignore  .tokeignore  UE07_py_argparse.cvcrack.html  UE07_py_argparse.cvcrypt.html  flake.nix  pyproject.toml
06_py_adminscripting/: journalctlremote.py  task_5.md
07_py_argparse/: cvcrack.py  rk_cdb.txt  rk_ceb.txt  rk_vehugo.txt
UE06_py_adminscripting/: journalctlremote.py
UE07_py_argparse/: cvcrack.py  cvcrypt.py  rk.txt
UE08_py_comprehension/: spellcheck.py
UE09_py_oop/: fraction.py
UE10_py_pandas/: noten.py
